Fix: Quotes in content slider (#113)
* Progress...

* Removes Heading from content slider container

* Removes scroll behavior from content slider

* Adds div class parameters

* Removes scroll behavior

* Removes visible scrollbar

* Updates markup

* Fixes problem with hover icons not showing up in mobile

* Progress...

* Reduces width of content cards

* Updates error message

* Progress...

* Fixes control-surface divs breaking onto a new row.

* Adds reminder to refactor

* Fixes controls sufrace divs in mobile

* Refactors Content slider's control surface to dynamically resize

* Removes debugging red background

* Adds back defauld constructor values

* Formats index.js

* Increases the pixel values for forwards and backward clicks

* Refactors behavior into functions

* Re-Refactors content-slider.js

* Progres...

* Adds data-attribute to component slider

* Adds new quotes content-slider

* Fixes CSS breaking on non-card content

* Adds padding to .quote

* Removes whitespace

* Adds blue background to quotes

* Updates controls to `<button>`

* WEB-9793: Updates content slider to scroll with the widgh of a card

* Removes separate quotes content slider.

* Formats indes.js

* Formats content-slider.hbs

--- a/scss/partials/_content-slider.scss
+++ b/scss/partials/_content-slider.scss
@@ -4,9 +4,11 @@
 
   &__block {
     //Note: these widths might have to be refactored to a different location
-    width: 24rem;
+    min-width: 24rem;
+    white-space: normal; 
     @include breakpoint(tablet) {
-      width: 53.5rem;
+      min-width: 47.5rem;
+      
     }
   }
 
